--- a/src/App.css
+++ b/src/App.css
@@ -94,20 +94,33 @@ form {
 
 
 ul.dashboard {
-  display:flex;
-  flex-wrap: wrap;
+  width:100%;
 }
 
-.dashboard-item{
+.dashboard-item {
   background-color :#3e434e;
   border: 1px solid white;
   display: block;
-  margin-right: 4px;
-  margin-bottom: 4px;
-  padding: 8px;
-  width: 300px;
+  margin-right: 8px;
+  margin-bottom: 10px;
+  width: 100%;
   overflow:hidden;
 }
+
+.dashboard-item_frame {
+  padding:10px;
+}
+
+@media (min-width: 480px)  { 
+  .dashboard-item {
+    width: 300px;
+  }
+  ul.dashboard {
+    display:flex;
+    flex-wrap: wrap;
+  }
+}
+
 
 .graph {
   margin: 10px 0;
