--- a/src/App.css
+++ b/src/App.css
@@ -22,10 +22,6 @@ h1, h2, h3 {
   margin-top: 0;
 }
 
-.inline {
-  display: inline;
-}
-
 ul {
   padding: 0;
   margin: 0
@@ -47,47 +43,22 @@ a:hover {
   color: grey;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 input, button {
   text-align: center;
 }
-
 input, label {
   margin-right: 8px;
 }
-
 label {
   /*display: block;*/
   margin-top: 12px;
 }
-
-input, #units {
-  /*display: block;*/
-  height: 30px;
-  min-width: 300px;
-}
-
- #units {
-  /*display: block;*/
-  height: 32px;
-  min-width: 305px;
-}
-
 button {
   background-color: aquamarine;
   border: 1px solid grey;
   font-size: 1.3em;
   padding: 8px 16px;
 }
-
 form {
   text-align: center;
 }
@@ -96,7 +67,6 @@ form {
 ul.dashboard {
   width:100%;
 }
-
 .dashboard-item {
   background-color :#3e434e;
   border: 1px solid white;
@@ -106,11 +76,9 @@ ul.dashboard {
   width: 100%;
   overflow:hidden;
 }
-
 .dashboard-item_frame {
   padding:10px;
 }
-
 @media (min-width: 480px)  { 
   .dashboard-item {
     width: 300px;
@@ -121,10 +89,29 @@ ul.dashboard {
   }
 }
 
-
 .graph {
   margin: 10px 0;
 }
+.graph-item {
+  background: rgb(0, 100, 0)
+}
+.graph-item--negative {
+  background-color: rgb(141, 22, 22);
+}
+
 .logs, .dashboard{
   list-style: none;
+}
+
+input, #units {
+  height: 30px;
+  min-width: 300px;
+}
+#units {
+  height: 32px;
+  min-width: 305px;
+}
+
+.inline {
+  display: inline;
 }
