included new header in collection component

--- a/src/App.css
+++ b/src/App.css
@@ -105,8 +105,15 @@ ul.dashboard {
 
 input, #units {
   height: 30px;
-  min-width: 300px;
+  width: 100%;
 }
+
+@media (min-width: 480px)  { 
+  input, #units {
+    min-width: 300px;
+  }
+}
+
 #units {
   height: 32px;
   min-width: 305px;
